--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,3 +14,7 @@
 @import './sections/Main';
 @import './sections/footer';
 @import './sections/juegos';
+@import './sections/Redes';
+@import './sections/quienSoy';
+@import './sections/legal';
+@import './sections/informationGames/gamePages';
