--- a/scss/sections/_Navbar.scss
+++ b/scss/sections/_Navbar.scss
@@ -66,6 +66,12 @@
 .breadcrumb-item.active {
     color: white;
 }
+.breadcrumb{
+    margin-left: 10px;
+}
+.breadcrumb-item+.breadcrumb-item::before{
+    color: rgba(215, 234, 255, 0.75);  
+}
 
 @media (max-width: 689px) {
     .navbar{
@@ -92,4 +98,26 @@
             }
         }
     }
+}
+
+@media (max-width: 1168px){
+    .breadcrumb{
+        margin-left: 0px;
+        width: 100vw;
+        display: flex;
+        justify-content: center;
+        &::after{
+            content: '';
+            background-color: rgba(0, 0, 0, 0.582);
+            z-index: -1;
+            position: absolute;
+            left: 50%;
+            transform: translate(-50%);
+            width: 100%;
+            height: 30px;
+            top: 82px;
+            border-radius: 10px;
+        }
+    }
+    
 }
