--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -4,7 +4,7 @@
     background-color: $color_dark_blue;
    display: flex;
     justify-content: space-between;
-    padding-right: 30px;
+    padding-right: 20px;
     &_logo{
         display: flex;
         flex-direction: column;
@@ -52,4 +52,31 @@
         
     }
    
+}
+
+@media (max-width: 466px) {
+    .footer{
+        padding-right: 1vw;
+        &_logo{
+            img{
+                max-width: 30vw; 
+            }
+            h4{
+                font-size: 7vw;
+            }
+        }
+        &_buttonlist{
+            li{
+                h3{
+                    font-size: 5vw;
+                }
+            }
+            &--Redes{
+                img{
+                    max-width: 25px;
+                    margin-inline-start: 5px;
+                }
+            }
+        }
+    }
 }
