--- a/scss/sections/_Navbar.scss
+++ b/scss/sections/_Navbar.scss
@@ -9,6 +9,7 @@
 
     &_left {
         height: 100%;
+        z-index: -2;
         &_Logo {
             height: 100%;
             font-style: none;
@@ -91,6 +92,7 @@
         }
 
         &_left {
+            
             &_Logo{
                 h3{
                     display: none;
