--- a/CSS/style.css
+++ b/CSS/style.css
@@ -35,7 +35,7 @@
     width: 100%;
     position: fixed;
     justify-content: center;
-    z-index: -1; }
+    z-index: -10; }
     .navbar_buttonsList--boton {
       list-style: none;
       margin-inline-start: 40px; }
@@ -71,8 +71,10 @@
       margin-inline-start: 30px; }
       .navbar_buttonsList--boton a span {
         font-size: 3vw; }
-  .navbar_left_Logo h3 {
-    display: none; } }
+  .navbar_left {
+    z-index: -11; }
+    .navbar_left_Logo h3 {
+      display: none; } }
 
 @media (max-width: 1168px) {
   .breadcrumb {
@@ -133,7 +135,7 @@
 
 .carousel {
   z-index: 0;
-  max-width: 80vw; }
+  max-width: 50vw; }
   .carousel .carousel-item a {
     display: flex;
     justify-content: center;
